# 100-days-of-code

./: pyproject.toml
10-A/: app.py
Day-01/: app.py  pyproject.toml
Day-02/: app.py  pyproject.toml
Day-03/: pyproject.toml
Day-03/LeapYearCalculation/: app.py
Day-03/LoveCalculator/: app.py
Day-03/Roller Coaster/: app.py
Day-03/TreasureGame/: app.py
Day-03/odd_number_project/: app.py
Day-04/HeadandTailProject/: app.py
Day-04/RandomPlayGround/: list.py  module.py  random_module.py
Day-04/RockPaperScissors/: app.py
Day-04/TreasureFinderGame/: app.py
Day-05/FizzBuzzGame/: app.py
Day-05/PasswordGenerator/: app.py
Day-05/PlayGround/: forLoop.py  loop.py
Day-05/SumOfEvenNumbers/: app.py
Day-06/FinalRobotProject/: Readme.md  app.py
Day-06/PlayGround/: build-in-function.py
Day-06/RobotLab/: Readme.md  app.py
Day-07/: app.py  hangman_art.py
Day-07/PlayGround/: step-1.py  step-2.py  step-3.py
Day-08/CanOfPaint/: app.py
Day-08/CasarCipher/: app.py
Day-08/PlayGround/: greeting.py
Day-08/PrimeNumber/: app.py
Day-09/Auction_Program/: app.py
Day-09/Nesting/: app.py  playground.py
Day-09/PlayGround/: app.py
Day-10/: calculator.py
Day-14/: highter-lower-game.py
Day-19/: app.py
Day-20/: main.py  snake.py
Day-21/: food.py  main.py  score_board.py  snake.py
Day-22/: app.py  ball.py  paddle.py  scoreboard.py
Day-27/: main.py
Day-35/: .env  fine.txt  hot.txt  main.py  so_hot.txt  warm.txt  weather_message.py
Day-45/: main.py  movie.txt
Day-48/: interaction.py  main.py
PlayGround/: datatype.py
(+68 files in other folders)
