[tool.poetry]
name = "100-days-of-python"
version = "0.1.0"
description = ""
authors = ["thihathura <thihathura@ytechnologies.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"
selenium = "^4.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
